# xubamp

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  THIRD_PARTY_NOTICES.md  sessionCodexz
crates/audio/: Cargo.toml
crates/audio/examples/: play.rs  tone.rs
crates/audio/src/: channels.rs  command.rs  decode.rs  engine.rs  equalizer.rs  id3v1.rs  lib.rs  output.rs  playlist.rs  playlist_file.rs  ring.rs
crates/audio/tests/: decode.rs  engine.rs  live_playback.rs  ring.rs  ring_noalloc.rs  tags.rs
crates/audio/tests/fixtures/: README.md  generate-tone.sh
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: eqf.rs  filter.rs  lib.rs  presets.rs
crates/portal/: Cargo.toml
crates/portal/src/: lib.rs
crates/render/: Cargo.toml
crates/render/examples/: pledit_preview.rs
crates/render/src/: adwaita.rs  equalizer.rs  fileinfo.rs  hit.rs  jump.rs  lib.rs  marquee.rs  menu.rs  pledit.rs  posbar.rs  preferences.rs  shade.rs  slider.rs  vis.rs
crates/skin/: Cargo.toml
crates/skin/src/: bmp.rs  color.rs  container.rs  default_skin.rs  font.rs  lib.rs  model.rs  pledit.rs  region.rs  sprites.rs  testkit.rs  textfont.rs  viscolor.rs
crates/wl/: Cargo.toml
crates/wl/src/: lib.rs  panes.rs
crates/xubamp/: Cargo.toml
crates/xubamp/src/: main.rs  player.rs  portal_actions.rs
docs/: ARCHITECTURE.md  DISTRIBUTION.md  PROGRESS.md  pledit-research.md  webamp-parity-plan.md
icons/: README.md  render-icons.sh
packaging/: COMPLIANCE.md  Dockerfile.deb  build-deb-container.sh  build-deb.sh  collect-cargo-licenses.py  install-icons.sh  io.github.hec_ovi.xubamp.metainfo.xml  uninstall-icons.sh  xubamp.1  xubamp.desktop
packaging/debian/: changelog  copyright  shlibdeps-control
packaging/flatpak/: io.github.hec_ovi.xubamp.yml
packaging/snap/: .gitignore  build-snap.sh  snapcraft.yaml
scripts/: dev-docker.sh
skins/: SpyAMP Pro Heaven.wsz  SpyAMP_Blue_Edition.wsz  XFileAmp10.wsz  XMMS_standard_skin.wsz  spyamp40_stealth.wsz
