[package]
name = "xubamp-audio"
description = "Decode + PipeWire output engine for xubamp: producer thread, lock-free SPSC ring, realtime callback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Pure-Rust decoders. default-features off trims formats we do not use; keep wav+pcm+mp3.
# MP3 patents expired in 2017, so shipping the decoder is fine. PipeWire output and the
# lock-free ring land in later sub-units of Phase 3.
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3"] }
