[package]
name = "xubamp"
description = "Lean native-Wayland Winamp 2.9x-style audio player for Ubuntu 26.04"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "xubamp"
path = "src/main.rs"

[dependencies]
xubamp-skin = { path = "../skin" }
xubamp-render = { path = "../render" }
xubamp-wl = { path = "../wl" }
xubamp-library = { path = "../library" }
xubamp-config = { path = "../config" }
xubamp-dsp = { path = "../dsp" }
xubamp-portal = { path = "../portal" }
# Audio is optional so the UI still builds and runs on a clean host with no PipeWire deps.
# The dev container builds `--features audio`, which pulls the audio crate's `output` backend.
xubamp-audio = { path = "../audio", optional = true }

[features]
# Play a media-file argument through PipeWire. Off by default (host UI dev stays PipeWire-free);
# enabled in the dev container: `cargo run -p xubamp --features audio -- song.mp3`.
audio = ["dep:xubamp-audio", "xubamp-audio/output"]
# In-window keyboard shortcuts (transport / volume / seek). Off by default because it makes
# libxkbcommon a build-time dependency (see the wl crate); the dev container enables it alongside
# `audio`. Split from `audio` so a keyboard-only build stays possible.
keyboard = ["xubamp-wl/keyboard"]
